# pyDBSI_fast

./: .gitignore  README.md  pyproject.toml  setup.py
dbsi_optimized/: __init__.py  cli.py  postprocessing.py  visualization.py  visulization.py
dbsi_optimized.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dbsi_optimized/calibration/: __init__.py  optimization.py
dbsi_optimized/core/: __init__.py  design_matrix.py  snr_estimation.py  solver.py
dbsi_optimized/core/__pycache__/: design_matrix.build_anisotropic_basis_numba-32.py310.1.nbc  design_matrix.build_anisotropic_basis_numba-32.py310.nbi  design_matrix.build_anisotropic_basis_numba-33.py310.1.nbc  design_matrix.build_anisotropic_basis_numba-33.py310.nbi  design_matrix.build_anisotropic_basis_numba-39.py310.1.nbc  design_matrix.build_anisotropic_basis_numba-39.py310.nbi  design_matrix.build_isotropic_basis_numba-49.py310.1.nbc  design_matrix.build_isotropic_basis_numba-49.py310.nbi  design_matrix.build_isotropic_basis_numba-51.py310.1.nbc  design_matrix.build_isotropic_basis_numba-51.py310.nbi  design_matrix.build_isotropic_basis_numba-56.py310.1.nbc  design_matrix.build_isotropic_basis_numba-56.py310.nbi  design_matrix.compute_fiber_signal_numba-12.py310.1.nbc  design_matrix.compute_fiber_signal_numba-12.py310.nbi  design_matrix.compute_fiber_signal_numba-15.py310.1.nbc  design_matrix.compute_fiber_signal_numba-15.py310.nbi  design_matrix.compute_fiber_signal_numba-22.py310.1.nbc  design_matrix.compute_fiber_signal_numba-22.py310.nbi  solver.fast_nnls_coordinate_descent-4.py310.1.nbc  (+3 more)
dbsi_optimized/models/: __init__.py  fast_dbsi.py
dbsi_optimized/preprocessing/: __init__.py  loader.py
notebooks/: DBSI_Tutorial.ipynb  postprocessing.py
scripts/: run_dbsi.py
tests/: test_basic.py
(+8 files in other folders)
