[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbsi-optimized"
version = "1.0.0"
description = "High-Performance DBSI Implementation (20-40× faster)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.21.0,<2.0",
    "scipy>=1.7.0",
    "numba>=0.56.0",
    "nibabel>=3.2.0",
    "dipy>=1.5.0",
    "joblib>=1.1.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0", 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
dbsi-fit = "dbsi_optimized.cli:main"

[project.urls]
Homepage = "https://github.com/guarnich/pyDBSI_fast"
Repository = "https://github.com/guarnich/pyDBSI_fast"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbsi_optimized*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100